added basic burger

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/Slow_Cooker_Mac_and_Cheese.html">Slow Cooker Mac and Cheese</a>
     <a href="recipes/Sloppy_Joes.html">Sloppy Joes</a>
+    <a href="recipes/Basic_Burgers.html">Basic Burger</a>
 </body>
 </html>
