--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <a href="recipes/Slow_Cooker_Mac_and_Cheese.html">Slow Cooker Mac and Cheese</a>
     <a href="recipes/Sloppy_Joes.html">Sloppy Joes</a>
     <a href="recipes/Basic_Burgers.html">Basic Burger</a>
+    <a href="recipes/Easy_chicken_alfredo.html">Easy chicken alfredo</a>
 </body>
 </html>
