added french Fries

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="recipes/Sloppy_Joes.html">Sloppy Joes</a>
     <a href="recipes/Basic_Burgers.html">Basic Burger</a>
     <a href="recipes/Easy_chicken_alfredo.html">Easy chicken alfredo</a>
+    <a href="recipes/French_Fries.html">French Fries</a>
 </body>
 </html>
