added css classes to all recipes and style sheet

--- a/recipes/Easy_chicken_alfredo.html
+++ b/recipes/Easy_chicken_alfredo.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Easy Chicken Alfredo</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Chicken Alfredo</h1>
+    <h1 class="title">Chicken Alfredo</h1>
     <img src="images/alfredo.webp" alt="Chicken Alfredo">
     <h2>Description</h2>
-    <p>This chicken Alfredo recipe with jar sauce is a quick and easy dinner for those hectic nights. For extra flavor, cook the chicken with lemon pepper and seasoning salt.</p>
+        <p class="dis">This chicken Alfredo recipe with jar sauce is a quick and easy dinner for those hectic nights. For extra flavor, cook the chicken with lemon pepper and seasoning salt.</p>
     <h2>Ingredients</h2>
-        <ul>
+        <ul class="ingredients">
             <li>1 pound uncooked fettuccine or linguine</li>
             <li>2 boneless chicken breast halves, cooked and cubed</li>
             <li>1 (16 ounce) jar Alfredo-style pasta sauce</li>
@@ -19,7 +20,7 @@
             <li>⅓ cup milk</li>
         </ul>
     <h2>Instructions</h2>
-        <ol>
+        <ol class="instructions">
             <li>Fill a large pot with lightly salted water and bring to a rolling boil. Cook fettuccine at a boil until tender yet firm to the bite, about 8 minutes. Drain well.</li>
             <li>While the pasta is cooking, place cubed cooked chicken, Alfredo sauce, frozen vegetables, mushrooms, and milk in a large saucepan over medium-low heat. Cook and stir until chicken is heated through and vegetables are tender.</li>
             <li>Serve warm Alfredo and chicken sauce over cooked noodles.</li>
