--- a/recipes/French_Fries.html
+++ b/recipes/French_Fries.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>French Fries</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>French Fries</h1>
+    <h1 class="title">French Fries</h1>
     <img src="images/french_fries.webp" alt="French Fries">
-    <h2>Description</h2>
-    <p>My family loves seasoned fries and with 4 children the bag of fries from the store became too expensive. So I tried batter — after all, it makes chicken, shrimp, and onion rings crispy so why not potatoes! Now even my husband can't get enough of these French fries. They even stay crispy when you reheat them in the microwave. </p>
-    <h2>Ingredients</h2>
-        <ul>
+    <h2 class="title">Description</h2>
+        <p class="dis">My family loves seasoned fries and with 4 children the bag of fries from the store became too expensive. So I tried batter — after all, it makes chicken, shrimp, and onion rings crispy so why not potatoes! Now even my husband can't get enough of these French fries. They even stay crispy when you reheat them in the microwave. </p>
+    <h2 class="title">Ingredients</h2>
+        <ul class="ingredients">
             <li>2 ½ pounds russet potatoes, peeled</li>
             <li>1 cup vegetable oil for frying</li>
             <li>1 cup all-purpose flour</li>
@@ -20,8 +21,8 @@
             <li>1 teaspoon salt</li>
             <li>½ cup water, or as needed</li>
         </ul>
-    <h2>Instructions</h2>
-        <ol>
+    <h2 class="title">Instructions</h2>
+        <ol class="instructions">
             <li>Slice potatoes into French fries and place them into a large bowl of cold water to prevent them from turning brown.</li>
             <li>Heat oil in a heavy saucepan or large skillet to 350 degrees F (175 degrees C).</li>
             <li>While the oil is heating, sift flour, garlic salt, onion salt, paprika, and salt into a large bowl. Gradually stir in enough water to make a slightly thick batter that can be drizzled from a spoon.</li>
