--- a/recipes/Slow_Cooker_Mac_and_Cheese.html
+++ b/recipes/Slow_Cooker_Mac_and_Cheese.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Mac and Cheese</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Slow Cooker Mac and Cheese</h1>
+    <h1 class="title">Slow Cooker Mac and Cheese</h1>
     <img src="./images/image.webp" alt="Mac'n'Cheese">
     <h2>Description</h2>
-         <p>This crockpot mac and cheese recipe is creamy, comforting, and takes just moments to assemble in a slow cooker. Great for large family gatherings and to take to potluck dinners. It's always a big hit!</p>
+         <p class="dis">This crockpot mac and cheese recipe is creamy, comforting, and takes just moments to assemble in a slow cooker. Great for large family gatherings and to take to potluck dinners. It's always a big hit!</p>
     <h2>Ingredients</h2>
-        <ul>
+        <ul class="ingredients">
             <li>1(16 ounce) package of elbow macaroni</li>
             <li>1/2 cup butter</li>
             <li>salt and black peper to taste</li>
@@ -20,9 +21,9 @@
             <li>2 Cups whole milk</li>
             <li>1 (10.5 ounce) can condensed Cheddar cheese soup</li>
             <li>1 pinch paprika,or as desired (optional)</li>
-    </ul>
-   <h2>Instructions</h2>
-     <ol>
+        </ul>
+    <h2>Instructions</h2>
+    <ol class="instructions">
         <li>Fill a large pot with lightly salted water and bring to a rolling boil. Stir in macaroni and return to a boil. Cook pasta uncovered, stirring occasionally, until tender yet firm to the bite, about 8 minutes. Drain and transfer pasta to a slow cooker.</li>
         <li>Add butter to pasta and stir until melted; season with salt and pepper. Sprinkle about 1/2 of the Cheddar cheese over pasta and stir.</li>
         <li>Whisk evaporated milk and eggs together in a bowl until smooth; stir into pasta mixture.</li>
